--- a/src/_includes/partials/mainnav.njk
+++ b/src/_includes/partials/mainnav.njk
@@ -1,5 +1,5 @@
 {% for navitem in mainnav[locale] %}
-  {% if loop.first %}<ul>{% endif %}
-    <li><a href="{{ navitem.url }}">{{ navitem.label }}</a></li>
+  {% if loop.first %}<ul class="c-mainnav">{% endif %}
+    <li class="c-mainnav__item"><a class="c-mainnav__link" href="{{ navitem.url }}">{{ navitem.label }}</a></li>
   {% if loop.last %}</ul>{% endif %}
 {% endfor %}
