--- a/src/_includes/layouts/blogpost.njk
+++ b/src/_includes/layouts/blogpost.njk
@@ -1,5 +1,7 @@
 {% extends "layouts/base.njk" %}
 
+{% set metaTitle = title %}
+
 {% block content %}
   <h1>{{ title }}</h1>
   {{ content | safe }}
