--- a/src/content/en/pages/blog.njk
+++ b/src/content/en/pages/blog.njk
@@ -5,6 +5,8 @@ translationKey: "blogpage"
 
 {% extends "layouts/base.njk" %}
 
+{% set metaTitle= "Blog archive" %}
+
 {% block content %}
 
   <h2>Blogposts archive</h2>
@@ -13,12 +15,11 @@ translationKey: "blogpage"
       <li>
 
         <article>
-          <p><time datetime="{{ post.date | date('Y-MM-DD') }}">{{ post.date | date("DD MMMM[,] Y", locale) }}</time></p>
+          <p><time datetime="{{ post.date | dateIso }}">{{ post.date | dateFull(locale) }}</time></p>
           <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
         </article>
 
       </li>
-
     {% if loop.last %}</ul>{% endif %}
   {% endfor %}
 
