--- a/src/content/fr/pages/blog.njk
+++ b/src/content/fr/pages/blog.njk
@@ -5,6 +5,8 @@ translationKey: "blogpage"
 
 {% extends "layouts/base.njk" %}
 
+{% set metaTitle= "Archives du blog" %}
+
 {% block content %}
 
   <h2>Archive du blog</h2>
@@ -13,7 +15,7 @@ translationKey: "blogpage"
       <li>
 
         <article>
-          <p><time datetime="{{ post.date | date('Y-MM-DD') }}">{{ post.date | date("DD MMMM[,] Y", locale) }}</time></p>
+          <p><time datetime="{{ post.date | dateIso }}">{{ post.date | dateFull(locale) }}</time></p>
           <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
         </article>
 
