Add CSS and header

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if metaTitle %}{{ metaTitle }} - {% endif %}{{ site[locale].title }}</title>
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
-
-  {% include "partials/lggnav.njk" %}
-  {% include "partials/mainnav.njk" %}
+  
+  {% include "partials/header.njk" %}
 
   {% block content %}{% endblock %}
 
